--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Black Jack 2</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class='hello-world'></h1>
+    <p id="text-area">Black Jack!</p>
+    <section class="buttons">
+      <button id="new-game-button">New Game!</button>
+      <button id="hit-button">Hit!</button>
+      <button id="stay-button">Stay</button>
+    </section>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
