--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,19 @@
   </head>
   <body>
     <p id="text-area">Black Jack!</p>
-    <section class="buttons">
-      <button id="new-game-button">New Game!</button>
-      <button id="hit-button">Hit!</button>
-      <button id="stay-button">Stay</button>
-    </section>
+    <div id="playerDiv">
+      <p id="playerScore"></p>
+    </div>
+    <div id="dealerDiv">
+      <p>Dealer</p>
+    </div>
+    <div>
+      <div class="buttons">
+        <button id="new-game-button">New Game!</button>
+        <button id="hit-button">Hit!</button>
+        <button id="stay-button">Stay</button>
+      </div>
+    </div>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
