--- a/public/blackjack.html
+++ b/public/blackjack.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <div id="headerDiv">
-      <p>Black Jack!</p>
+    <p>Black Jack!</p>
     </div>
-    <div id="playerDiv"></div>
-    <div id="dealerDiv"></div>
+    <div id="playerDiv">
+    </div>
+    <div id="playerScore"></div>
+    <div id="dealerDiv">
+    </div>
+    <div id="dealerScore"></div>
     <div id="buttonsDiv">
       <button id="new-game-button">New Game!</button>
       <button id="hit-button">Hit!</button>
